# CarHmi

./: .gitignore  README.md  run.sh
APP/: run.sh
APP/Album/: Album.pro  confirmpage.cpp  confirmpage.h  confirmpage.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  opentreethread.cpp  opentreethread.h  picanimation.cpp  picanimation.h  picbutton.cpp  picbutton.h  piclistitem.cpp  piclistitem.h  piclistwidget.cpp  piclistwidget.h  picshow.cpp  picshow.h  picshow.ui  prosetpage.cpp  prosetpage.h  prosetpage.ui  protree.cpp  protree.h  protree.ui  protreeitem.cpp  protreeitem.h  protreethread.cpp  protreethread.h  protreewidget.cpp  protreewidget.h  protreewidget.ui  removeprotree.cpp  removeprotree.h  removeprotree.ui  res.qrc  slidebutton.cpp  slidebutton.h  (+8 more)
APP/LinePlayer/: lineplayer.pro  main.cpp  res.qrc  widget.cpp  widget.h  widget.ui
APP/Map/: InputField.qml  Keyboard.qml  Map.pro  MapTypePanel.qml  MapView.qml  SearchBar.qml  gpsmanager.cpp  gpsmanager.h  main.cpp  main.qml  qml.qrc  widget.cpp  widget.h  widget.ui
APP/RearCamApp/: RearCamApp.pro  mainwindow.cpp  mainwindow.h  videowidget.cpp  videowidget.h
APP/RearCamApp/Arm_date/: CMakeLists.txt  main.cpp
APP/game/: LandFarmer.pro  REPORT.md  anmationpixmap.cpp  anmationpixmap.h  bgmcontrol.cpp  card.cpp  (+44 more)
Desktop/: Desktop.pro  Makefile  appinfo.h  apptilequickitem.cpp  apptilequickitem.h  appwidget.cpp  appwidget.h  environmentquickitem.cpp  environmentquickitem.h  environmentwidget.cpp  environmentwidget.h  main.cpp  moc_widget.cpp  qrc_res.cpp  res.qrc  ui_widget.h  widget.cpp  widget.h
(+5 files in other folders)
